<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="boston.hackingforgood.resourceapp.components.profile_setup.ProfileSetupActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginLeft="@dimen/setup_page_margin"
    android:layout_marginRight="@dimen/setup_page_margin"
    >

    <ImageView
        android:layout_width="@dimen/image_profile_size"
        android:layout_height="@dimen/image_profile_size"
        android:id="@+id/image_profile"
        android:contentDescription="@string/profile_image"
        android:background="@color/colorPrimary"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_photo"
        android:id="@+id/button_change_photo"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_real_name"
        android:inputType="text"
        android:hint="@string/real_name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_display_name"
        android:hint="@string/display_name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/edit_text_email"
        android:hint="@string/email_address"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edit_text_mobile"
        android:hint="@string/mobile_phone"
        />

    <AutoCompleteTextView
        android:id="@+id/autocomplete_organization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/organization"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:id="@+id/button_change_password"
        />
</LinearLayout>
