<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="boston.hackingforgood.resourceapp.components.profile_setup.ProfileSetupActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginLeft="@dimen/setup_page_margin"
    android:layout_marginRight="@dimen/setup_page_margin"
    >

    <ImageView
        android:layout_width="@dimen/image_profile_size"
        android:layout_height="@dimen/image_profile_size"
        android:id="@+id/image_profile"
        android:contentDescription="@string/profile_image"
        android:background="@color/colorPrimary"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_logo"
        android:id="@+id/button_change_logo"
        />

    <AutoCompleteTextView
        android:id="@+id/autocomplete_organization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/organization_name"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_organization_website"
        android:hint="@string/organization_website"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edit_text_organization_phone"
        android:hint="@string/organization_phone"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_marginTop="40dp"
        android:id="@+id/button_change_password"
        />
</LinearLayout>
