<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="boston.hackingforgood.resourceapp.components.post.PostActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <ImageView
            android:layout_width="@dimen/image_profile_size"
            android:layout_height="@dimen/image_profile_size"
            android:background="@color/colorPrimary"
            android:id="@+id/image_profile"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/profile_image"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_post_title"
            android:id="@+id/post_title"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/image_profile"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_user_name"
            android:id="@+id/post_user_name"
            android:layout_below="@+id/post_title"
            android:layout_toEndOf="@id/image_profile"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_organization"
            android:id="@+id/organization"
            android:layout_below="@id/post_user_name"
            android:layout_toEndOf="@id/image_profile"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:id="@+id/description"
            android:layout_below="@id/image_profile"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/private_message"
            android:id="@+id/button_pm"
            style="?android:buttonBarStyle"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/reply"
            android:id="@+id/button_reply"
            style="?android:buttonBarStyle"
            />
    </LinearLayout>
</LinearLayout>
