<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".components.launch.LaunchActivity"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_to"
        android:id="@+id/welcomeToTextView"
        android:textStyle="bold"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/companyLogo"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/about_us"
        android:id="@+id/aboutUsButton"
        android:layout_marginBottom="10dp"
        android:background="#ffffff"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/apply_now"
        android:id="@+id/applyNowButton"
        android:layout_marginBottom="5dp"
        android:background="#ffffff"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".5"
            android:layout_marginRight="20dp"
            android:background="#375656"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:background="@null"
            android:layout_height="match_parent"
            android:hint="@string/username"
            android:id="@+id/userNameEditText"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".5"
            android:layout_marginRight="20dp"
            android:id="@+id/passwordEditText"
            android:background="#375656"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:background="@null"
            android:layout_height="match_parent"
            android:hint="@string/password"
            />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/signInButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#ffff"
        android:text="@string/forgot_password"
        android:id="@+id/forgotPasswordButton"
        android:enabled="false"
        />


</LinearLayout>
